test-service/k8s/0-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-service
  labels:
    monitoring: prometheus
    # istio-injection: enabled
