test-service/k8s/1-deployment-app-v1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-service-v1
  namespace: test-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-service
      version: v1
  template:
    metadata:      
      labels:
        app: test-service
        version: v1
        istio: monitor
    spec:
      serviceAccountName: test-service-sa
      containers:
        - image: test-service:1.0
          imagePullPolicy: Never
          name: test-service
          ports:
            - name: http
              containerPort: 5055
