test-service/k8s/2-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: first-app
  namespace: staging
spec:
  ports:
    - name: http
      port: 3000
  selector:
    app: first-app
