test-service/k8s/3-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test-service-server
  namespace: staging
spec:
  ports:
    - name: http
      port: 3000
  selector:
    app: test-service
