test-service/k8s/4-destination-rule.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: test-service-destination-rule
  namespace: staging
spec:
  host: test-service-server.staging.svc.cluster.local
  subsets:
    - name: v1
      labels:
        app: test-service
        version: v1
    - name: v2
      labels:
        app: test-service
        version: v2
