test-service/k8s/5-virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: test-service-route
  namespace: staging
spec:
  hosts:
    - test-service-server.staging.svc.cluster.local
  http:
    - route:
        - destination:
            host: test-service-server.staging.svc.cluster.local
            subset: v1
          weight: 0
        - destination:
            host: test-service-server.staging.svc.cluster.local
            subset: v2
          weight: 100
